[tool.poetry]
name = "tetris-ai-game"
version = "0.1.0"
description = "tetris implementation with AI using pygame"
authors = ["rak810 <rak810@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
